# agda-index

./: .gitattributes  Cargo.nix  Cargo.toml  README.md  flake.nix
src/: cmdline.rs  main.rs  module.rs  output.rs  pipeline.rs
src/output/: docset.rs  json.rs  mod.rs  plain.rs
