# Any copyright is dedicated to the Public Domain.
# https://creativecommons.org/publicdomain/zero/1.0/

[package]
name = "agda-index"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
argh = "0.1.10"
indoc = "2.0.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
scraper = "0.14.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
threadpool = "1.8.1"
url = "2.3.1"
